# mockcmd

./: Cargo.toml  LICENSE  Makefile  README.md
examples/: git.rs
src/: fake.rs  fake_tests.rs  lib.rs  non_test.rs  real.rs  test.rs
tests/: real_tests.rs  using_non_test_code.rs
